feat: remove use of `register_email` and `delete_email` table, use `idx_user_identifier` index and `delete_identifier` table instead; DeleteByUserID fix: when standalone call kong, nil pointer reference panic
